// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Booking List less than max 1`] = `
.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .ant-card-actions {
  margin-top: auto;
}

<div>
  <div>
    <h4
      class="ant-typography css-dev-only-do-not-override-diro6f"
    >
      Rooms
    </h4>
    <div
      class="ant-row css-dev-only-do-not-override-diro6f"
      style="margin-left: -8px; margin-right: -8px;"
    >
      <div
        class="ant-col ant-col-xs-12 ant-col-sm-8 ant-col-md-6 css-dev-only-do-not-override-diro6f"
        style="padding-left: 8px; padding-right: 8px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-small c0 css-dev-only-do-not-override-diro6f"
        >
          <div
            class="ant-card-body"
          >
            <h5
              class="ant-typography css-dev-only-do-not-override-diro6f"
            />
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-diro6f"
            >
              From: 23/04/2023 18:30
            </span>
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-diro6f"
            >
              To: 23/04/2023 19:00
            </span>
          </div>
          <ul
            class="ant-card-actions"
          >
            <li
              style="width: 50%;"
            >
              <span>
                <button
                  class="ant-btn css-dev-only-do-not-override-diro6f ant-btn-text ant-btn-sm ant-btn-dangerous"
                  data-testid="booking-cancel-btn"
                  type="button"
                >
                  <span>
                    Cancel
                  </span>
                </button>
              </span>
            </li>
            <li
              style="width: 50%;"
            >
              <span>
                <button
                  class="ant-btn css-dev-only-do-not-override-diro6f ant-btn-text ant-btn-sm"
                  data-testid="booking-edit-btn"
                  type="button"
                >
                  <span
                    aria-label="edit"
                    class="anticon anticon-edit"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="edit"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                      />
                    </svg>
                  </span>
                  <span>
                    Edit
                  </span>
                </button>
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Booking List more than max 1`] = `
.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .ant-card-actions {
  margin-top: auto;
}

.c1 {
  text-align: right;
}

<div>
  <div>
    <h4
      class="ant-typography css-dev-only-do-not-override-diro6f"
    >
      Rooms
    </h4>
    <div
      class="ant-row css-dev-only-do-not-override-diro6f"
      style="margin-left: -8px; margin-right: -8px;"
    >
      <div
        class="ant-col ant-col-xs-12 ant-col-sm-8 ant-col-md-6 css-dev-only-do-not-override-diro6f"
        style="padding-left: 8px; padding-right: 8px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-small c0 css-dev-only-do-not-override-diro6f"
        >
          <div
            class="ant-card-body"
          >
            <h5
              class="ant-typography css-dev-only-do-not-override-diro6f"
            />
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-diro6f"
            >
              From: 23/04/2023 18:30
            </span>
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-diro6f"
            >
              To: 23/04/2023 19:00
            </span>
          </div>
          <ul
            class="ant-card-actions"
          >
            <li
              style="width: 50%;"
            >
              <span>
                <button
                  class="ant-btn css-dev-only-do-not-override-diro6f ant-btn-text ant-btn-sm ant-btn-dangerous"
                  data-testid="booking-cancel-btn"
                  type="button"
                >
                  <span>
                    Cancel
                  </span>
                </button>
              </span>
            </li>
            <li
              style="width: 50%;"
            >
              <span>
                <button
                  class="ant-btn css-dev-only-do-not-override-diro6f ant-btn-text ant-btn-sm"
                  data-testid="booking-edit-btn"
                  type="button"
                >
                  <span
                    aria-label="edit"
                    class="anticon anticon-edit"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="edit"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                      />
                    </svg>
                  </span>
                  <span>
                    Edit
                  </span>
                </button>
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ant-col ant-col-xs-12 ant-col-sm-8 ant-col-md-6 css-dev-only-do-not-override-diro6f"
        style="padding-left: 8px; padding-right: 8px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-small c0 css-dev-only-do-not-override-diro6f"
        >
          <div
            class="ant-card-body"
          >
            <h5
              class="ant-typography css-dev-only-do-not-override-diro6f"
            />
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-diro6f"
            >
              From: 23/04/2023 18:30
            </span>
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-diro6f"
            >
              To: 23/04/2023 19:00
            </span>
          </div>
          <ul
            class="ant-card-actions"
          >
            <li
              style="width: 50%;"
            >
              <span>
                <button
                  class="ant-btn css-dev-only-do-not-override-diro6f ant-btn-text ant-btn-sm ant-btn-dangerous"
                  data-testid="booking-cancel-btn"
                  type="button"
                >
                  <span>
                    Cancel
                  </span>
                </button>
              </span>
            </li>
            <li
              style="width: 50%;"
            >
              <span>
                <button
                  class="ant-btn css-dev-only-do-not-override-diro6f ant-btn-text ant-btn-sm"
                  data-testid="booking-edit-btn"
                  type="button"
                >
                  <span
                    aria-label="edit"
                    class="anticon anticon-edit"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="edit"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                      />
                    </svg>
                  </span>
                  <span>
                    Edit
                  </span>
                </button>
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="c1"
    >
      <a
        data-testid="view-all"
        href="/rooms"
      >
        View all 
        <span
          aria-label="double-right"
          class="anticon anticon-double-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="double-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
            />
          </svg>
        </span>
      </a>
    </div>
  </div>
</div>
`;
